--- a/app/foreshadow/Enclave/Makefile
+++ b/app/foreshadow/Enclave/Makefile
@@ -1,8 +1,8 @@
 CC		  = gcc
 AR		  = ar
 LD		  = gcc
-EDGER		  = sgx_edger8r
-SIGNER		  = sgx_sign
+EDGER		  = $(SGX_SDK)/bin/x64/sgx_edger8r
+SIGNER		  = $(SGX_SDK)/bin/x64/sgx_sign
 INCLUDE       = -I$(SGX_SDK)/include -I$(SGX_SDK)/include/tlibc
 T_CFLAGS	  = $(CFLAGS) -nostdinc -fvisibility=hidden -fpie -fstack-protector -g -Os
 U_CFLAGS	  = $(CFLAGS) -nostdinc -fvisibility=hidden -fpie -fstack-protector -g
