--- a/libsgxstep/Makefile.config
+++ b/libsgxstep/Makefile.config
@@ -19,8 +19,8 @@ ifndef NO_SGX
    export NO_SGX=0
 endif
 
-ifndef LIBSGXSTEP_SILENT
-   export LIBSGXSTEP_SILENT=0
+ifndef LIBSGXSTEP_VERBOSE
+   export LIBSGXSTEP_SILENT=1
 endif
 
 CFLAGS              += -DSGX_STEP_PLATFORM=$(SGX_STEP_PLATFORM) -DNO_SGX=$(NO_SGX) -DLIBSGXSTEP_SILENT=$(LIBSGXSTEP_SILENT)
